Issue CXDEV-1949: Alignment of text after icons in the SUB side menus.

--- a/aegon-sass-library/base/_icon.scss
+++ b/aegon-sass-library/base/_icon.scss
@@ -4,6 +4,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding-right: 8px;
+  display: inline-block;
+  min-width: 1.5em;
 }
 
 a.icon-user-link:before {
